test/files/neg/classtags_contextbound_b.check
classtags_contextbound_b.scala:5: error: No ClassTag available for T
  def foo[T] = mkArray[T]
                      ^
one error found
